--- a/frontend/public/reset-password.html
+++ b/frontend/public/reset-password.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2WPWKYJQVC"></script>
+  <script src="./ga-init.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Reset Password | Sai Ram Tours & Travels</title>
