Refactor code structure for improved readability and maintainability

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,8 +14,12 @@
 
 <body>
   <header class="topbar">
-    <div class="brand" aria-label="Company title">GO SRTT - Your perfect travel partner.</div>
-  </header>
+  <div class="brand" aria-label="GO SRTT Logo and title">
+    <a href="./" aria-hidden="true" tabindex="-1">
+    <img src="./images/gen.png" alt="GO SRTT Logo" width="160" height="48"></a>
+    <span>GO SRTT - Your perfect travel partner.</span>
+  </div>
+</header>
 
   <!-- Toast -->
   <div id="toast" class="toast" role="status" aria-live="polite" aria-atomic="true"></div>
@@ -64,7 +68,7 @@
   </main>
 
   <footer class="footer">
-    <div class="footer-text">© GOSRTT. All rights reversed.</div>
+    <div class="footer-text">©Sai Ram Tours And Travels. All rights reserved.</div>
   </footer>
 
   <script src="./script.js"></script>
