--- a/frontend/public/reset-password.html
+++ b/frontend/public/reset-password.html
@@ -13,8 +13,12 @@
 
 <body>
   <header class="topbar">
-    <div class="brand">GO SRTT - Your perfect travel partner.</div>
-  </header>
+  <div class="brand" aria-label="GO SRTT Logo and title">
+    <a href="./" aria-hidden="true" tabindex="-1">
+    <img src="./images/gen.png" alt="GO SRTT Logo" width="160" height="48"></a>
+    <span>GO SRTT - Your perfect travel partner.</span>
+  </div>
+</header>
 
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
@@ -57,7 +61,7 @@
   </main>
 
   <footer class="footer">
-    <div class="footer-text">© GOSRTT. All rights reserved.</div>
+    <div class="footer-text">©Sai Ram Tours And Travels. All rights reserved.</div>
   </footer>
 
   <script src="./reset-password.js"></script>
